--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <script type="text/javascript" src="assets/app.js" charset="utf-8"></script>
+        <link rel="stylesheet" type="text/css" href="assets/style.css">
     </head>
     <body>
-        <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
         <div class="test"></div>
     </body>
 </html>
